Read content variable from post request

--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,7 @@
 <h2>Add new post</h2>
 <p>
     <form action="/new" method="POST" role="form">
-    <textarea class="form-control" row="6"></textarea> 
+    <textarea name="content" class="form-control" row="6" placeholder="Type post text here" style="width:1000px"></textarea> 
     <br />
     <button type="submit" class="btn btn-primary">Submit</button> 
     </form>   
