--- a/views/details.erb
+++ b/views/details.erb
@@ -10,7 +10,7 @@
 <h4>Comments:</h4>
 <p>
    <form action="/details/<%= @row['id'] %>" method="POST" role="form">
-    <textarea name="content" class="form-control" row="12" placeholder="Type post text here" style="width:1000px"></textarea> 
+    <textarea name="content" class="form-control" row="12" placeholder="Type post text here"></textarea> 
     <br />
     <button type="submit" class="btn btn-primary">Add comment</button> 
     </form>  
